chnges line added 79to86

--- a/main.html
+++ b/main.html
@@ -60,17 +60,7 @@
 									</div>
 								</div>
 							</li>
-							<li class="dropdown">
-								<a href="#">Where to go<i class="fas fa-caret-down"></i></a>
-								<div class="nav-content">
-									<div class="nav-sub">
-										<ul>
-											<li><a href="#">Attractive Destinations</a></li>
-											<li><a href="#">Cities & Other Locations</a></li>
-										</ul>
-									</div>
-								</div>
-							</li>
+							
 							<li class="dropdown">
 								<a href="#">Plan your trip<i class="fas fa-caret-down"></i></a>
 								<div class="nav-content">
@@ -86,6 +76,15 @@
 					</div>
 				</div>
 			</nav>
+			<div class="nav-content">
+				<div class="nav-sub">
+					<ul>
+						<li><a href="#">About Sabaragamuwa</a></li>
+						<li><a href="#">Book an Accomodation</a></li>
+					</ul>
+				</div>
+			</div>
+			
 			<div class="header-title">
 				<div id="main-title">welcome to <span>Sabaragamuwa</span></div>
 				<div id="sub-title">Relax the mind. Feel the nature.</div>
