--- a/locations.html
+++ b/locations.html
@@ -92,6 +92,9 @@
 			      	<p>
 			      		Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages.
 			      	</p>
+
+					<h2>visiting changes part</h2>
+					<p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab odit cumque aut omnis, fugit tempore dignissimos nostrum adipisci quia quisquam repellat rem, magni minus exercitationem illo corporis dolores ex reiciendis, ullam nobis vel inventore necessitatibus?</p>
 			      	
 			    </article>
 		  	</section>
